# fastapi-supabase

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: run-ci.yml
app/: server.py
app/database/: dal.py  db.py
app/database/models/: user.py
app/routes/: user.py
app/schemas/: user.py
workflows/: run-ci.yml
